Add endpoint for managing the user - needs fleshing out
