# internal/models/list.go
@@ -1,9 +1,10 @@
 package models
 
 type List struct {
-	Id        string `json:"id"`
-	UserId    string `json:"user_id"`
-	CreatedAt string `json:"created_at"`
-	Name      string `json:"name"`
-	SharingId string `json:"sharing_id"`
+	Id            string `json:"id"`
+	UserId        string `json:"user_id"`
+	CreatedAt     string `json:"created_at"`
+	Name          string `json:"name"`
+	SharingId     string `json:"sharing_id"`
+	ImageFileName string `json:"image_file_name"`
 }
