# internal/models/user.go
@@ -1,0 +1,7 @@
+package models
+
+type User struct {
+	Id            string `json:"id"`
+	Name          string `json:"email"`
+	ImageFileName string `json:"image_file_name"`
+}
